# rocket-blogger

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yaml  package-lock.json  package.json  tailwind.config.js
frontend/: gulpfile.mjs  package.json  pnpm-lock.yaml  rspack.config.js  tailwind.config.js  webpack.config.js
frontend/src/: index.js  links.html  scripts.html
migrations/2024-06-21-000922_create_posts/: down.sql  up.sql
src/: csp.rs  db.rs  main.rs  schema.rs
src/models/: post.rs
src/routes/: create.rs  mod.rs  prelude.rs  root.rs
templates/: index.html.hbs  index.html.tera  layout.html.hbs  layout.html.tera  new.html.hbs  new.html.tera
