[package]
name = "rocket-blogger"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.1"
dotenvy = "0.15"

[dependencies.rocket_dyn_templates]
version = "0.2.0"
features = ["tera"]

[dependencies.diesel]
version = "2.2.1"
features = ["postgres"]

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["diesel"]
